force-app/main/default/objects/Approval_Process_Step__c/Approval_Process_Step__c.object-meta.xml
<CustomObject>
    <label>Approval Process Step</label>
    <nameField>
        <displayFormat>APS-{0000}</displayFormat>
        <label>Approval Process Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Process Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>