force-app/main/default/objects/Approval_Process_Step__c/fields/Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process__c</fullName>
    <label>Approval Process</label>
    <referenceTo>Approval_Process__c</referenceTo>
    <relationshipLabel>Approval Process Steps</relationshipLabel>
    <relationshipName>Approval_Process_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>