force-app/main/default/objects/Approval_Process_Step__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Process_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>